@@ -5,6 +5,8 @@ See https://github.com/sourceruckus/ruckusrd/commits/master for full log.
 * v0.19.0
 in development
 
+- Upgraded all subprojects to latest available versions as of 9/11/23.
+
 * v0.18.0
 2022-05-13: RuckusRD v0.18.0
 
